--- a/app/views/web/ost/events_news/_news.erb
+++ b/app/views/web/ost/events_news/_news.erb
@@ -1,4 +1,4 @@
-<div class="row py-5" id="news">
+<div class="py-5" id="news">
   <div class="container">
     <h3 class="pl-4 pl-md-2 text-center">
       <svg class="ost-news-logo">
@@ -76,7 +76,7 @@
 
       Handlebars.registerHelper("prettifyDate", function(timestamp) {
         return new Date(parseInt(timestamp)*1000).toLocaleDateString('en-GB', {
-          day : 'numeric',
+          day : '2-digit',
           month : 'short',
           year : 'numeric'
         });
