roadmap page updates

--- a/app/views/web/ost/roadmap/_mobile.erb
+++ b/app/views/web/ost/roadmap/_mobile.erb
@@ -66,8 +66,14 @@
 
 <div class="container-fluid d-md-none">
   <div class="row">
-    <div class="col-12" style="background: linear-gradient(#f2f8f8, #ffffff);height: 100px">
-
+    <div class="col-12" style="background: linear-gradient(#f2f8f8, #ffffff);height: 200px">
+      <div class="container h-100">
+        <div class="row h-100">
+          <div class="col-12">
+            <div class="status h-100 d-flex align-items-center">Disclaimer: All dates provided are directional and subject to change based on business requirements and macroeconomic conditions. While we intend to provide the community with detailed and highly transparent updates, information on some projects may be withheld due to confidentiality agreements or competitive market dynamics.</div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
