--- a/app/views/web/ost/roadmap/desktop/_2018-q4.erb
+++ b/app/views/web/ost/roadmap/desktop/_2018-q4.erb
@@ -38,28 +38,24 @@
             </switch>
           </svg>
         </div>
-        <div class="text-bold">OpenST Protocol 0.9.5</div>
+        <div class="text-bold">OpenST Protocol Mainnet Alpha</div>
         <div class="status">Status: In Progress</div>
-        <ul class="desc-lines">
-          <li>Mainnet Alpha</li>
-        </ul>
       </div>
     </div>
     <div class="col-2 bg-line first py-5 d-flex align-items-center"></div>
     <div class="col-4 bg-line second py-5 d-flex align-items-center">
       <div class="container-content">
-        <div class="text-bold">OST KIT Alpha 4</div>
+        <div class="text-bold">OST KIT</div>
         <div class="status">Status: In Progress</div>
         <ul class="desc-lines">
-          <li>Wallet SDK</li>
-          <li>Simple Smart Contracts</li>
-          <li>Scalability & Performance</li>
+          <li>Wallet SDK Specification & Security Framework</li>
+          <li>Economy Automation Specification</li>
         </ul>
       </div>
     </div>
     <div class="col-4 bg-line third py-5 d-flex align-items-center">
       <div class="container-content">
-        <div class="text-bold">Redeem BT for OST</div>
+        <div class="text-bold">Redeem BT for OST (internal alpha)</div>
         <div class="status">Status: In Progress</div>
       </div>
     </div>
