--- a/app/views/web/ost/roadmap/desktop/_2019-q1.erb
+++ b/app/views/web/ost/roadmap/desktop/_2019-q1.erb
@@ -9,11 +9,8 @@
   <div class="row bg-h-border position-relative">
     <div class="col-2 bg-line first py-6 d-flex align-items-center">
       <div class="container-content p-15-10">
-        <div class="text-bold">OpenST Protocol 0.10.0</div>
+        <div class="text-bold">OpenST Protocol 0.10.0 Mainnet Beta</div>
         <div class="status">Status: Upcoming</div>
-        <ul class="desc-lines">
-          <li>Mainnet Beta</li>
-        </ul>
       </div>
     </div>
     <div class="col-2 bg-line first py-6 d-flex align-items-center">
@@ -24,17 +21,17 @@
     </div>
     <div class="col-4 bg-line second py-6 d-flex align-items-center">
       <div class="container-content">
-        <div class="text-bold">OST KIT Beta</div>
+        <div class="text-bold">OST KIT Beta Security Audit</div>
         <div class="status">Status: Upcoming</div>
         <ul class="desc-lines">
-          <li>OST KYC Integration</li>
-          <li>OST Wallet Beta</li>
+          <li>Wallet SDK</li>
+          <li>Scalability & Performance</li>
         </ul>
       </div>
     </div>
     <div class="col-4 bg-line third py-6 align-items-center d-flex">
       <div class="container-content">
-        <div class="text-bold">Swap BT for ETH Beta</div>
+        <div class="text-bold">Redeem BT for in-app purchases (alpha)</div>
         <div class="status">Status: Upcoming</div>
       </div>
     </div>
