--- a/app/views/web/ost/roadmap/desktop/_2019-q2.erb
+++ b/app/views/web/ost/roadmap/desktop/_2019-q2.erb
@@ -3,17 +3,14 @@
   <%= render :partial => "/web/ost/roadmap/desktop/quarter-header", locals: {
     year: '2019',
     quarter: 'Q2',
-    desc_html: '<span class="text-bold">OST General Availability for mainstream businesses.</span>'
+    desc_html: '<span class="text-bold">OST KIT Beta Availability for mainstream businesses.</span>'
   } %>
 
   <div class="row bg-h-border position-relative">
     <div class="col-2 bg-line first py-6 d-flex align-items-center">
       <div class="container-content">
-        <div class="text-bold">OpenST Protocol 0.10.1</div>
+        <div class="text-bold">OpenST Protocol 0.10</div>
         <div class="status">Status: Upcoming</div>
-        <ul class="desc-lines">
-          <li>Non-Fungible Tokens & Token Engineering Modules</li>
-        </ul>
       </div>
     </div>
     <div class="col-2 bg-line first py-6 d-flex align-items-center"></div>
@@ -30,7 +27,7 @@
     </div>
     <div class="col-4 bg-line third py-6 align-items-center d-flex">
       <div class="container-content">
-        <div class="text-bold">Swap BT for BT, ETH, BTC, and in-kind redemption partners.</div>
+        <div class="text-bold">Redeem BT for in-app purchases</div>
         <div class="status">Status: Upcoming</div>
       </div>
     </div>
