--- a/app/views/web/ost/roadmap/desktop/_2019-q3.erb
+++ b/app/views/web/ost/roadmap/desktop/_2019-q3.erb
@@ -3,17 +3,14 @@
   <%= render :partial => "/web/ost/roadmap/desktop/quarter-header", locals: {
     year: '2019',
     quarter: 'Q3',
-    desc_html: '<span class="text-bold">Fungible and non-fungible tokens.</span> Economy stabilization options. Crypto-fiat options.'
+    desc_html: '<span class="text-bold">OST KIT General Availability for mainstream businesses, with BTEX beta.'
   } %>
 
   <div class="row bg-h-border position-relative">
     <div class="col-2 bg-line first py-6 d-flex align-items-center">
       <div class="container-content p-15-10">
-        <div class="text-bold">OpenST Protocol 0.10.2</div>
+        <div class="text-bold">OpenST Protocol 0.11</div>
         <div class="status">Status: Upcoming</div>
-        <ul class="desc-lines">
-          <li>3rd Party Wallets SDK</li>
-        </ul>
       </div>
     </div>
     <div class="col-2 bg-line first py-6 d-flex align-items-center">
@@ -24,13 +21,13 @@
     </div>
     <div class="col-4 bg-line second py-6 d-flex align-items-center">
       <div class="container-content">
-        <div class="text-bold">OST STABLE<br/>OST ANALYTICS</div>
+        <div class="text-bold">OST KIT Release<br/>OST UNIVERSAL WALLET<br/>OST ECONOMY AUTOMATION<br/>OST KIT NFT</div>
         <div class="status">Status: Upcoming</div>
       </div>
     </div>
     <div class="col-4 bg-line third py-6 align-items-center d-flex">
       <div class="container-content">
-        <div class="text-bold">Swap BT for Fiat</div>
+        <div class="text-bold">Redeem BT for OST, BT, ETH, BTC, and in-kind redemption partners.</div>
         <div class="status">Status: Upcoming</div>
       </div>
     </div>
