--- a/app/views/web/ost/roadmap/desktop/_2019-q4.erb
+++ b/app/views/web/ost/roadmap/desktop/_2019-q4.erb
@@ -9,11 +9,8 @@
   <div class="row bg-h-border position-relative">
     <div class="col-2 bg-line first py-6 d-flex align-items-center">
       <div class="container-content p-15-10">
-        <div class="text-bold">OpenST Protocol 0.11.0</div>
+        <div class="text-bold">OpenST Protocol 0.12 BT-EX & BT-DEX Framework</div>
         <div class="status">Status: Upcoming</div>
-        <ul class="desc-lines">
-          <li>BT-EX & BT-DEX Framework</li>
-        </ul>
       </div>
     </div>
     <div class="col-2 bg-line first py-6 d-flex align-items-center"></div>
