--- a/app/views/web/ost/roadmap/mobile/_btx_exchange.erb
+++ b/app/views/web/ost/roadmap/mobile/_btx_exchange.erb
@@ -8,7 +8,7 @@
 <div class="row">
   <div class="col-12 bg-line third pt-5 mx-auto">
     <div class="container-content">
-      <div class="text-bold">Redeem BT for OST</div>
+      <div class="text-bold">Redeem BT for OST (internal alpha)</div>
       <div class="status">Status: Progress</div>
     </div>
   </div>
@@ -25,7 +25,7 @@
 <div class="row">
   <div class="col-12 bg-line third pt-5 mx-auto">
     <div class="container-content p-15-10">
-      <div class="text-bold">Swap BT for ETH Beta</div>
+      <div class="text-bold">Redeem BT for in-app purchases (alpha)</div>
       <div class="status">Status: Upcoming</div>
     </div>
   </div>
@@ -36,13 +36,13 @@
 <%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
   year: '2019',
   quarter: 'Q2',
-  desc_html: '<span class="text-bold">OST General Availability for mainstream businesses.</span>'
+  desc_html: '<span class="text-bold">OST KIT Beta Availability for mainstream businesses.</span>'
 } %>
 
 <div class="row">
   <div class="col-12 bg-line third pt-5 mx-auto">
     <div class="container-content p-15-10">
-      <div class="text-bold">Swap BT for BT, ETH, BTC, and in-kind redemption partners.</div>
+      <div class="text-bold">Redeem BT for in-app purchases</div>
       <div class="status">Status: Upcoming</div>
     </div>
   </div>
@@ -53,13 +53,13 @@
 <%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
   year: '2019',
   quarter: 'Q3',
-  desc_html: '<span class="text-bold">Fungible and non-fungible tokens.</span> Economy stabilization options. Crypto-fiat options.'
+  desc_html: '<span class="text-bold">OST KIT General Availability for mainstream businesses, with BTEX beta.</span>'
 } %>
 
 <div class="row">
   <div class="col-12 bg-line third pt-5 mx-auto">
     <div class="container-content p-15-10">
-      <div class="text-bold">Swap BT for Fiat </div>
+      <div class="text-bold">Redeem BT for OST, BT, ETH, BTC, and in-kind redemption partners.</div>
       <div class="status">Status: Upcoming</div>
     </div>
   </div>
