--- a/app/views/web/ost/roadmap/mobile/_developer_tools.erb
+++ b/app/views/web/ost/roadmap/mobile/_developer_tools.erb
@@ -113,12 +113,11 @@
 <div class="row">
   <div class="col-12 bg-line second pt-5 mx-auto">
     <div class="container-content">
-      <div class="text-bold">OST KIT Alpha 4</div>
+      <div class="text-bold">OST KIT</div>
       <div class="status">Status: Progress</div>
       <ul class="desc-lines">
-        <li>Wallet SDK</li>
-        <li>Simple Smart Contracts</li>
-        <li>Scalability & Performance</li>
+        <li>Wallet SDK Specification & Security Framework</li>
+        <li>Economy Automation Specification</li>
       </ul>
     </div>
   </div>
@@ -135,11 +134,11 @@
 <div class="row">
   <div class="col-12 bg-line second pt-5 mx-auto">
     <div class="container-content p-15-10">
-      <div class="text-bold">OST KIT Beta</div>
+      <div class="text-bold">OST KIT Beta Security Audit</div>
       <div class="status">Status: Upcoming</div>
       <ul class="desc-lines">
-        <li>OST KYC Integration</li>
-        <li>OST Wallet Beta</li>
+        <li>Wallet SDK</li>
+        <li>Scalability & Performance</li>
       </ul>
     </div>
   </div>
@@ -151,7 +150,7 @@
 <%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
   year: '2019',
   quarter: 'Q2',
-  desc_html: '<span class="text-bold">OST General Availability for mainstream businesses.</span>'
+  desc_html: '<span class="text-bold">OST KIT Beta Availability for mainstream businesses.</span>'
 } %>
 
 <div class="row">
@@ -170,14 +169,16 @@
 <%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
   year: '2019',
   quarter: 'Q3',
-  desc_html: '<span class="text-bold">Fungible and non-fungible tokens.</span> Economy stabilization options. Crypto-fiat options.'
+  desc_html: '<span class="text-bold">OST KIT General Availability for mainstream businesses, with BTEX beta.</span>'
 } %>
 
 <div class="row">
   <div class="col-12 bg-line second pt-5 mx-auto">
     <div class="container-content p-15-10">
-      <div class="text-bold">OST STABLE</div>
-      <div class="text-bold">OST ANALYTICS</div>
+      <div class="text-bold">OST KIT Release</div>
+      <div class="text-bold">OST UNIVERSAL WALLET</div>
+      <div class="text-bold">OST ECONOMY AUTOMATION</div>
+      <div class="text-bold">OST KIT NFT</div>
       <div class="status">Status: Upcoming</div>
     </div>
   </div>
