roadmap page updates

--- a/app/views/web/ost/roadmap/desktop/_2019-q1.erb
+++ b/app/views/web/ost/roadmap/desktop/_2019-q1.erb
@@ -3,7 +3,7 @@
   <%= render :partial => "/web/ost/roadmap/desktop/quarter-header", locals: {
     year: '2019',
     quarter: 'Q1',
-    desc_html: '<span class="text-bold">OpenST & OST Mainnet.</span> Branded Token economies on mainnet with cash-out to OST or ETH.'
+    desc_html: '<span class="text-bold">OpenST & OST Mainnet security audit.  Branded Token economies on mainnet with redeem for in-app purchases.</span>'
   } %>
 
   <div class="row bg-h-border position-relative">
