--- a/app/views/web/ost/roadmap/mobile/_infrastructure.erb
+++ b/app/views/web/ost/roadmap/mobile/_infrastructure.erb
@@ -144,7 +144,7 @@
 <%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
   year: '2018',
   quarter: 'Q4',
-  desc_html: '<span class="text-bold">Test integrations of OST on Mainnet with cash-out to OST.</span>'
+  desc_html: '<span class="text-bold">Test integrations of OST on Mainnet with redeem to OST.</span>'
 } %>
 
 <div class="row">
@@ -180,10 +180,7 @@
         </svg>
       </div>
       <div class="text-bold">OpenST Protocol Mainnet Alpha</div>
-      <div class="status">Status: In Progress</div>
-<!--      <ul class="desc-lines">-->
-<!--        <li>Mainnet Alpha</li>-->
-<!--      </ul>-->
+      <div class="status">Status: Complete</div>
     </div>
   </div>
 </div>
@@ -193,7 +190,7 @@
 <%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
   year: '2019',
   quarter: 'Q1',
-  desc_html: '<span class="text-bold">OpenST & OST Mainnet. Branded Token economies on mainnet with cash-out to OST or ETH.</span>'
+  desc_html: '<span class="text-bold">OpenST & OST Mainnet security audit. Branded Token economies on mainnet with redeem for in-app purchases.</span>'
 } %>
 
 <div class="row">
