--- a/app/views/web/ost/roadmap/mobile/_btx_exchange.erb
+++ b/app/views/web/ost/roadmap/mobile/_btx_exchange.erb
@@ -2,14 +2,14 @@
 <%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
   year: '2018',
   quarter: 'Q4',
-  desc_html: '<span class="text-bold">Test integrations of OST on Mainnet with cash-out to OST.</span>'
+  desc_html: '<span class="text-bold">Test integrations of OST on Mainnet with redeem to OST.</span>'
 } %>
 
 <div class="row">
   <div class="col-12 bg-line third pt-5 mx-auto">
     <div class="container-content">
       <div class="text-bold">Redeem BT for OST (internal alpha)</div>
-      <div class="status">Status: Progress</div>
+      <div class="status">Status: Complete</div>
     </div>
   </div>
 </div>
@@ -19,7 +19,7 @@
 <%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
   year: '2019',
   quarter: 'Q1',
-  desc_html: '<span class="text-bold">OpenST & OST Mainnet. Branded Token economies on mainnet with cash-out to OST or ETH.</span>'
+  desc_html: '<span class="text-bold">OpenST & OST Mainnet security audit. Branded Token economies on mainnet with redeem for in-app purchases.</span>'
 } %>
 
 <div class="row">
