--- a/app/views/web/ost/roadmap/mobile/_developer_tools.erb
+++ b/app/views/web/ost/roadmap/mobile/_developer_tools.erb
@@ -107,14 +107,14 @@
 <%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
   year: '2018',
   quarter: 'Q4',
-  desc_html: '<span class="text-bold">Test integrations of OST on Mainnet with cash-out to OST.</span>'
+  desc_html: '<span class="text-bold">Test integrations of OST on Mainnet with redeem to OST.</span>'
 } %>
 
 <div class="row">
   <div class="col-12 bg-line second pt-5 mx-auto">
     <div class="container-content">
-      <div class="text-bold">OST KIT</div>
-      <div class="status">Status: Progress</div>
+      <div class="text-bold">OST KIT Beta Frameworks</div>
+      <div class="status">Status: Complete</div>
       <ul class="desc-lines">
         <li>Wallet SDK Specification & Security Framework</li>
         <li>Economy Automation Specification</li>
@@ -128,7 +128,7 @@
 <%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
   year: '2019',
   quarter: 'Q1',
-  desc_html: '<span class="text-bold">OpenST & OST Mainnet. Branded Token economies on mainnet with cash-out to OST or ETH.</span>'
+  desc_html: '<span class="text-bold">OpenST & OST Mainnet security audit. Branded Token economies on mainnet with redeem for in-app purchases.</span>'
 } %>
 
 <div class="row">
