roadmap page updates

--- a/app/views/web/ost/roadmap/desktop/_2018-q4.erb
+++ b/app/views/web/ost/roadmap/desktop/_2018-q4.erb
@@ -3,7 +3,7 @@
   <%= render :partial => "/web/ost/roadmap/desktop/quarter-header", locals: {
     year: '2018',
     quarter: 'Q4',
-    desc_html: '<span class="text-bold">Test integrations of OST on Mainnet with redeem to OST.</span>.'
+    desc_html: '<span class="text-bold">Test integrations of OST on Mainnet with redeem to OST.</span>'
   } %>
 
   <div class="row bg-h-border position-relative">
