roadmap page updates

--- a/app/views/web/ost/roadmap/desktop/_2019-q3.erb
+++ b/app/views/web/ost/roadmap/desktop/_2019-q3.erb
@@ -21,7 +21,11 @@
     </div>
     <div class="col-4 bg-line second py-6 d-flex align-items-center">
       <div class="container-content">
-        <div class="text-bold">OST KIT Release<br/>OST UNIVERSAL WALLET<br/>OST ECONOMY AUTOMATION<br/>OST KIT NFT</div>
+        <div class="text-bold">OST KIT Release</div>
+        <div class="text-bold">OST WALLET SDK</div>
+        <div class="text-bold">OST UNIVERSAL WALLET</div>
+        <div class="text-bold">OST STABLE</div>
+        <div class="text-bold">OST KIT NFT</div>
         <div class="status">Status: Upcoming</div>
       </div>
     </div>
