--- a/app/views/web/ost/roadmap/desktop/_2019-q4.erb
+++ b/app/views/web/ost/roadmap/desktop/_2019-q4.erb
@@ -16,13 +16,14 @@
     <div class="col-2 bg-line first py-6 d-flex align-items-center"></div>
     <div class="col-4 bg-line second py-6 d-flex align-items-center">
       <div class="container-content">
-        <div class="text-bold">OST MARKETING</div>
+        <div class="text-bold">OST ANALYTICS</div>
+        <div class="text-bold">OST ECONOMY AUTOMATION</div>
         <div class="status">Status: Upcoming</div>
       </div>
     </div>
     <div class="col-4 bg-line third py-6 align-items-center d-flex">
       <div class="container-content">
-        <div class="text-bold">Additional Currency Pairings</div>
+        <div class="text-bold">Redeem BT for Fiat beta</div>
         <div class="status">Status: Upcoming</div>
       </div>
     </div>
