--- a/app/views/web/ost/roadmap/mobile/_btx_exchange.erb
+++ b/app/views/web/ost/roadmap/mobile/_btx_exchange.erb
@@ -76,7 +76,7 @@
 <div class="row">
   <div class="col-12 bg-line third pt-5 mx-auto">
     <div class="container-content p-15-10">
-      <div class="text-bold">Additional Currency Pairings</div>
+      <div class="text-bold">Redeem BT for Fiat beta</div>
       <div class="status">Status: Upcoming</div>
     </div>
   </div>
