--- a/app/views/web/ost/roadmap/mobile/_developer_tools.erb
+++ b/app/views/web/ost/roadmap/mobile/_developer_tools.erb
@@ -156,9 +156,9 @@
 <div class="row">
   <div class="col-12 bg-line second pt-5 mx-auto">
     <div class="container-content p-15-10">
-      <div class="text-bold">OST KIT Release</div>
-      <div class="text-bold">OST UNIVERSAL WALLET</div>
-      <div class="text-bold">OST KIT NFT</div>
+      <div class="text-bold">OST KIT Beta</div>
+      <div class="text-bold">OST Wallet SDK</div>
+      <div class="text-bold">OST KYC Integration</div>
       <div class="status">Status: Upcoming</div>
     </div>
   </div>
@@ -176,8 +176,9 @@
   <div class="col-12 bg-line second pt-5 mx-auto">
     <div class="container-content p-15-10">
       <div class="text-bold">OST KIT Release</div>
+      <div class="text-bold">OST WALLET SDK</div>
       <div class="text-bold">OST UNIVERSAL WALLET</div>
-      <div class="text-bold">OST ECONOMY AUTOMATION</div>
+      <div class="text-bold">OST STABLE</div>
       <div class="text-bold">OST KIT NFT</div>
       <div class="status">Status: Upcoming</div>
     </div>
@@ -195,7 +196,8 @@
 <div class="row">
   <div class="col-12 bg-line second pt-5 mx-auto">
     <div class="container-content p-15-10">
-      <div class="text-bold">OST MARKETING</div>
+      <div class="text-bold">OST ANALYTICS</div>
+      <div class="text-bold">OST ECONOMY AUTOMATION</div>
       <div class="status">Status: Upcoming</div>
     </div>
   </div>
