--- a/app/views/web/ost/roadmap/desktop/_2019-q2.erb
+++ b/app/views/web/ost/roadmap/desktop/_2019-q2.erb
@@ -16,12 +16,9 @@
     <div class="col-2 bg-line first py-6 d-flex align-items-center"></div>
     <div class="col-4 bg-line second py-6 d-flex align-items-center">
       <div class="container-content">
-        <div class="text-bold">OST KIT Release
-          <br/>
-          OST UNIVERSAL WALLET
-          <br/>
-          OST KIT NFT
-        </div>
+        <div class="text-bold">OST KIT Beta</div>
+        <div class="text-bold">OST Wallet SDK</div>
+        <div class="text-bold">OST KYC Integration</div>
         <div class="status">Status: Upcoming</div>
       </div>
     </div>
