typo fix in the description for the team advisors hiding events location after description

--- a/app/views/web/ost/index/_events_carousel.erb
+++ b/app/views/web/ost/index/_events_carousel.erb
@@ -33,7 +33,7 @@
                 </span>
                 <div class="media-body content-body">
                   <div class="heading"><%= date.strftime("%d %b %Y")%></div>
-                  <p class="event-desc"><%=item['event_name']%>  <%= item['event_desc'] %></p>
+                  <p class="event-desc"><%=item['event_name']%></p>
                   <p class="event-location mt-2"><%=item['event_desc']%></p>
                 </div>
 
