--- a/app/views/shared/web/common/_footer_links.erb
+++ b/app/views/shared/web/common/_footer_links.erb
@@ -32,7 +32,7 @@
             <li><a href="<%= GlobalConstant::Base.root_url %>careers" title="Careers">Careers</a></li>
             <li><a href="https://help.ost.com" target="_blank" title="Support">Support</a></li>
             <li><a href="<%= GlobalConstant::Base.root_url %>documents" title="Documents">Documents</a></li>
-            <li><a href="<%= GlobalConstant::CompanyOtherProductUrls.token_sale_url %>" title="Token Sale">Token Sale</a></li>
+<!--            <li><a href="<%#= GlobalConstant::CompanyOtherProductUrls.token_sale_url %>" title="Token Sale">Token Sale</a></li>-->
           </ul>
         </div>
         <div class="col-12 col-md mb-3 mb-sm-0">
@@ -40,7 +40,7 @@
           <ul class="footer-nav list-unstyled">
             <li><a href="<%= GlobalConstant::Base.root_url %>privacy" title="Privacy Policy">Privacy Policy</a></li>
             <li><a href="<%= GlobalConstant::Base.root_url %>terms" title="Terms of Use">Terms of Use</a></li>
-            <li><a href="https://drive.google.com/file/d/0B1E_xJPbELBKeU9pUk5uSnNqWFU/view" target="_blank" title="OST Token Terms">OST Token Terms</a></li>
+<!--            <li><a href="https://drive.google.com/file/d/0B1E_xJPbELBKeU9pUk5uSnNqWFU/view" target="_blank" title="OST Token Terms">OST Token Terms</a></li>-->
             <li><a href="https://openst.org" target="_blank" title="OpenST Foundation">OpenST Foundation</a></li>
           </ul>
         </div>
