--- a/app/views/shared/web/common/_navbarsubmenu.erb
+++ b/app/views/shared/web/common/_navbarsubmenu.erb
@@ -214,16 +214,16 @@
                 <span class="pl-2">Documents</span>
               </a>
             </li>
-            <li>
-              <a href="<%= GlobalConstant::CompanyOtherProductUrls.token_sale_url %>" class="nav-svg-link d-flex align-items-center" title="Token Sale">
-                <svg class="nav-svg">
-                  <switch>
-                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-token-sale-icon"></use>
-                  </switch>
-                </svg>
-                <span class="pl-2">Token Sale</span>
-              </a>
-            </li>
+<!--            <li>-->
+<!--              <a href="<%#= GlobalConstant::CompanyOtherProductUrls.token_sale_url %>" class="nav-svg-link d-flex align-items-center" title="Token Sale">-->
+<!--                <svg class="nav-svg">-->
+<!--                  <switch>-->
+<!--                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-token-sale-icon"></use>-->
+<!--                  </switch>-->
+<!--                </svg>-->
+<!--                <span class="pl-2">Token Sale</span>-->
+<!--              </a>-->
+<!--            </li>-->
           </ul>
         </li>
 
