--- a/app/views/web/ost/index.html.erb
+++ b/app/views/web/ost/index.html.erb
@@ -12,7 +12,7 @@
 <%= render :partial => "/web/ost/index/roadmap" %>
 <%= render :partial => "/web/ost/index/subscribe" %>
 <%= render :partial => "/web/ost/index/ost_team" %>
-<%= render :partial => "/web/ost/index/buy_ost" %>
+<%#= render :partial => "/web/ost/index/buy_ost" %>
 
 <!-- # Shared  / referenced assets / HTML elements / Modals etc. -->
 <%= render :partial => "/shared/web/modals/help_video" %>
