--- a/app/views/web/ost/team/_early_backers.erb
+++ b/app/views/web/ost/team/_early_backers.erb
@@ -5,7 +5,7 @@
         <div class="row">
           <div class="col-sm-10 col-sm-offset-1 mx-auto">
             <h2 class="heading mb-4 pb-3">Early Backers</h2>
-            <ul class="row">
+            <ul class="row m-0">
               <li class="col-12 col-md-4" itemprop="affiliation" itemscope itemtype="http://schema.org/Organization">
                 <a itemprop="url" href="https://www.tencent.com/zh-cn/index.html" target="_blank" title="Tencent">
                   <span class="tensent-logo"></span>
@@ -22,7 +22,7 @@
                 </a>
               </li>
             </ul>
-            <ul class="row">
+            <ul class="row m-0">
               <li class="col-12 col-md-4" itemprop="affiliation" itemscope itemtype="http://schema.org/Organization">
                 <a itemprop="url" href="https://500.co/" target="_blank" title="500 startups">
                   <span class="startups-logo"></span>
@@ -36,40 +36,6 @@
               <li class="col-12 col-md-4" itemprop="affiliation" itemscope itemtype="http://schema.org/Organization">
                 <a itemprop="url" href="http://correlationvc.com/" target="_blank" title="Corrilation Ventures">
                   <span class="corrilation-logo"></span>
-                </a>
-              </li>
-            </ul>
-            <ul class="row">
-              <li class="col-12 col-md-4" itemprop="affiliation" itemscope itemtype="http://schema.org/Organization">
-                <a itemprop="url" href="https://www.hashed.com/" target="_blank" title="Hashed">
-                  <span class="blockchain-partners-korea-logo"></span>
-                </a>
-              </li>
-              <li class="col-12 col-md-4" itemprop="affiliation" itemscope itemtype="http://schema.org/Organization">
-                <a itemprop="url" href="https://www.kryptonite1.co/" target="_blank" title="Kryptonite1">
-                  <span class="kryptonite-logo"></span>
-                </a>
-              </li>
-              <li class="col-12 col-md-4" itemprop="affiliation" itemscope itemtype="http://schema.org/Organization">
-                <a itemprop="url" href="https://svkcrypto.wordpress.com/" target="_blank" title="SVK Crypto">
-                  <span class="svk-crypto-logo"></span>
-                </a>
-              </li>
-            </ul>
-            <ul class="row">
-              <li class="col-12 col-md-4" itemprop="affiliation" itemscope itemtype="http://schema.org/Organization">
-                <a itemprop="url" href="https://kenetic.capital/" target="_blank" title="Kenetic Capital">
-                  <span class="kenetic-capital-early-backers-logo"></span>
-                </a>
-              </li>
-              <li class="col-12 col-md-4" itemprop="affiliation" itemscope itemtype="http://schema.org/Organization">
-                <a itemprop="url" href="http://cmcryptocapital.com/" target="_blank" title="CM Crypto Capital">
-                  <span class="cm-crypto-capital-logo"></span>
-                </a>
-              </li>
-              <li class="col-12 col-md-4" itemprop="affiliation" itemscope itemtype="http://schema.org/Organization">
-                <a itemprop="url" href="https://www.linkedin.com/in/mickhagen/" target="_blank" title="Mick Hagen">
-                  <span class="mick-hagen-logo"></span>
                 </a>
               </li>
             </ul>
