changes for ost website home page

--- a/app/views/web/ost/team/_early_backers.erb
+++ b/app/views/web/ost/team/_early_backers.erb
@@ -4,7 +4,7 @@
       <div class="col-12">
         <div class="row">
           <div class="col-sm-10 col-sm-offset-1 mx-auto">
-            <h2 class="heading mb-4 pb-3">Early Backers</h2>
+            <h2 class="heading mb-4 pb-3">Equity Investors</h2>
             <ul class="row m-0">
               <li class="col-12 col-md-4" itemprop="affiliation" itemscope itemtype="http://schema.org/Organization">
                 <a itemprop="url" href="https://www.tencent.com/zh-cn/index.html" target="_blank" title="Tencent">
